# ysfed

./: CHANGELOG.md  Cargo.toml  README.md  artifacts.json  changelog.rss  index.html  justfile  oranda.json  ysfed-installer.ps1.txt  ysfed-installer.sh.txt
.github/workflows/: release.yml  web.yml
artifacts/: index.html
changelog/: index.html
changelog/v0.1.0/: index.html
changelog/v0.1.1/: index.html
changelog/v0.1.2/: index.html
src/: constants.rs  decrypt.rs  encrypt.rs  error.rs  file.rs  lib.rs  main.rs  ybf.rs
