[package]
name = "ysfed"
version = "0.2.0"
description = "Simple tool for encrypting and decrypting files using a password."
license = "MIT OR Apache-2.0"
authors = ["Jorge Mayoral Álvarez <jorge.ma@yorch.dev>"]
repository = "https://github.com/JorgeMayoral/ysfed"
readme = "README.md"
homepage = "https://github.com/JorgeMayoral/ysfed"
keywords = ["encryption", "decryption", "password", "cli", "cryptography"]
categories = ["cryptography", "command-line-utilities"]
edition = "2021"

[lib]
name = "ybf"
path = "src/lib.rs"

[[bin]]
name = "ysfed"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
anyhow = "1.0.87"
argon2 = "0.5.3"
bincode = "1.3.3"
clap = { version = "4.5.17", features = ["derive"] }
rand = "0.8.5"
rpassword = "7.3.1"
serde = { version = "1.0.209", features = ["derive"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.6.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
